Modification de index.html pour mettre le nom Hugues HOUNKPATIN en titre

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="public/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="public/favicon/site.webmanifest" />
     
-    <title>Hugues Website</title>
+    <title>Hugues HOUNKPATIN</title>
   </head>
   <body>
     <div id="root"></div>
